@@ -75,8 +75,8 @@ AC_CONFIG_FILES([ krusader/Makefile ])
 AC_CONFIG_FILES([ krusader/BookMan/Makefile ])
 AC_CONFIG_FILES([ krusader/Dialogs/Makefile ])
 AC_CONFIG_FILES([ krusader/GUI/Makefile ])
-AC_CONFIG_FILES([ krusader/KViewer/Makefile ])
 AC_CONFIG_FILES([ krusader/Konfigurator/Makefile ])
+AC_CONFIG_FILES([ krusader/KViewer/Makefile ])
 AC_CONFIG_FILES([ krusader/MountMan/Makefile ])
 AC_CONFIG_FILES([ krusader/Panel/Makefile ])
 AC_CONFIG_FILES([ krusader/RemoteMan/Makefile ])
